--- a/packages/hubble/package.json
+++ b/packages/hubble/package.json
@@ -36,6 +36,7 @@
     "yargs": "^12.0.1"
   },
   "scripts": {
+    "prepare": "npm run build",
     "build": "npm run build-cli",
     "build-cli": "webpack --config ./cli.webpack.config.js",
     "publish:byoc": "node ./scripts/prereleaseVersion.js byoc-safe byoc",
